--- a/src/components/PlaylistCreatorUI.scss
+++ b/src/components/PlaylistCreatorUI.scss
@@ -1,19 +1,20 @@
 $spotifyGreen: #1ED760;
 .popup {
     position: fixed;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
+    z-index: 4;
+    width: 500px;
+    height: 200px;
+    top:50%;
+    left:50%;
+    margin-top: -100px;
+    margin-left: -250px; 
   }
   
 .popup_content {
-    //background-color: black;
     background-color: #252525; 
     padding: 10px;
     margin:auto;
     width: 500px;
-    //height: 25%;
-    // height: 35vh;
     border-radius: 20px;
     border: 1px solid $spotifyGreen;
     box-shadow: 0px 0px 15px $spotifyGreen;
